<resources>
    <string name="app_name">AgroEcologico</string>
    <string name="prefs_file">com.example.agroecologico.PREFERENCE_FILE_KEY</string>
    <string name="hintAuthEmailUser">Dirección de correo electrónico</string>
    <string name="hintAuthPasswordUser">Contraseña</string>
    <string name="textButtonAuthLogin">Iniciar Sesión</string>
    <string name="textButtonAuthLoginFacebook">Conectar con Facebook</string>
    <string name="textButtonAuthLoginGoogle">Conectar con Google</string>
    <string name="textButtonForgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="textButtonSignUp">Inscribirse</string>
    <string name="textButtonLogout">Cerrar sesión</string>
    <string name="hintSignUpNameUser">Nombre completo</string>
    <string name="textButtonReturnLogin">¿Ya tienes una cuenta? Iniciar sesión</string>
    <string name="hintSignUpNumberUser">Número de telefono</string>
    <string name="hintSignUpConfirmPasswordUser">Confirmar contraseña</string>
    <string name="item_home_title">Home</string>
    <string name="item_offers_title">Ofertas</string>
    <string name="item_buy_title">Comprar</string>
    <string name="item_perfil_title">Perfil</string>
    <string name="item_stalls_title">Puestos</string>
    <string name="item_notifications_title">Notificaciones</string>
    <string name="item_units_title">Unidades</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintStallName">Nombre del puesto de venta</string>
    <string name="hintUserID">Numero de Identificación</string>
    <string name="textButtonCreateStall">Crear Puesto de Venta</string>
    <string name="item_order_title">Pedidos</string>
</resources>