<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_stalls"
        android:title="@string/item_stalls_title"
        android:icon="@drawable/ic_stall"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_units"
        android:title="@string/item_units_title"
        android:icon="@drawable/ic_unidad"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_notifications"
        android:title="@string/item_notifications_title"
        android:icon="@drawable/ic_notifications"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_profile_admin"
        android:title="@string/item_perfil_title"
        android:icon="@drawable/ic_perfil"
        app:showAsAction="never"/>


</menu>