<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewAuthLogoApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="37dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAuthEmailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintAuthEmailUser"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginBottom="@dimen/marginBottomDefault"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAuthPasswordUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintAuthPasswordUser"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginBottom="@dimen/marginBottomDefault"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonAuthLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightButton"
            android:textAllCaps="false"
            android:text="@string/textButtonAuthLogin"
            android:background="@drawable/round_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginBottom="@dimen/marginBottomDefault"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_divider"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginBottom="@dimen/marginBottomDefault"/>

        <Button
            android:id="@+id/buttonAuthLoginFacebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightButton"
            android:textAllCaps="false"
            android:text="@string/textButtonAuthLoginFacebook"
            android:background="@drawable/round_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginBottom="@dimen/marginBottomDefault"/>

        <Button
            android:id="@+id/buttonAuthLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightButton"
            android:textAllCaps="false"
            android:text="@string/textButtonAuthLoginGoogle"
            android:background="@drawable/round_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginBottom="@dimen/marginBottomDefault"/>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_divider"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp">

            <Button
                android:id="@+id/buttonForgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/textButtonForgotPassword"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark" />

            <Space
                android:layout_width="2dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/textButtonSignUp"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

