<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewAuthLogoApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="37dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginAuthDefault"
            android:layout_marginRight="@dimen/marginAuthDefault"
            android:hint="@string/hintSignUpNameUser">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAuthEmailUser"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginAuthDefault"
            android:layout_marginRight="@dimen/marginAuthDefault"
            android:hint="@string/hintAuthEmailUser"
            android:transitionName="emailUserTransition">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextAuthEmailUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginAuthDefault"
            android:layout_marginRight="@dimen/marginAuthDefault"
            android:hint="@string/hintSignUpNumberUser">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAuthPasswordUser"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginAuthDefault"
            android:layout_marginRight="@dimen/marginAuthDefault"
            android:hint="@string/hintAuthPasswordUser"
            android:transitionName="passwordTransition">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextAuthPasswordUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginAuthDefault"
            android:layout_marginRight="@dimen/marginAuthDefault"
            android:layout_marginBottom="@dimen/marginBottomDefault"
            android:hint="@string/hintSignUpConfirmPasswordUser">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/marginAuthDefault"
            android:layout_marginRight="@dimen/marginAuthDefault"
            android:layout_marginBottom="@dimen/marginBottomDefault"
            android:background="@drawable/round_button"
            android:text="@string/textButtonSignUp"
            android:textAllCaps="false"
            android:transitionName="buttonTransition"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/marginAuthDefault"
            android:layout_marginRight="@dimen/marginAuthDefault"
            android:background="@color/color_divider"
            android:transitionName="viewTransition"/>

        <LinearLayout
            android:id="@+id/linearLayoutOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginAuthDefault"
            android:layout_marginRight="@dimen/marginAuthDefault"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:transitionName="linearLayoutTransition">

            <Button
                android:id="@+id/buttonReturnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:text="@string/textButtonReturnLogin"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark" />



        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>